@@ -2,6 +2,8 @@ version 1.3.0+git
 	* Fix bug with writing very large objects to disk
 	* Smarter handling of --aggressive-unload (do not unload what will be
 	immediately necessary)
+    * Work around corner case in `jug shell` command
+
 
 version 1.3.0 Tue Nov 1 2016 by luispedro
 	* Update `shell` subcommand to IPython 5
